--- a/7-node-mysql/3-rescuing-date-READ(R)/views/books.handlebars
+++ b/7-node-mysql/3-rescuing-date-READ(R)/views/books.handlebars
@@ -2,5 +2,5 @@
 <div class="books-container">
     {{#each books}}
         <div>#{{this.id}} - <span class="bold">{{this.title}}</span> - {{this.pageqty}} páginas</div>
-    {{/each books}}
+    {{/each}}
 </div>
